--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "andrewgioia.com",
   "version": "7.0.0",
-  "description": "Online landing page for Andrew Gioia, co-founder of TeachBoost.",
+  "description": "Internet homepage for Andrew Gioia, co-founder of TeachBoost.",
   "main": "public/index.html",
   "private": true,
   "dependencies": {
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "sass src/theme.scss dist/theme.css && cp src/index.html dist/index.html && cp -R src/img dist"
+    "dev": "sass --no-source-map src/scss/theme.scss dist/site.css && cp src/index.html dist/index.html && cp -R src/img dist && cp -R src/icons dist",
+    "prod": "sass --no-source-map src/scss/theme.scss dist/site.css && cp src/index.html dist/index.html && cp -R src/img dist && cp -R src/icons dist"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,9 @@
   },
   "keywords": [],
   "author": "Andrew Gioia",
-  "license": "ISC",
+  "license": "CC-BY-SA-4.0",
   "bugs": {
     "url": "https://github.com/andrewgioia/home/issues"
   },
-  "homepage": "https://github.com/andrewgioia/home#readme"
+  "homepage": "https://andrewgioia.com"
 }
