Updates npm publish script for cleaner file copying

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "sass --no-source-map src/scss/theme.scss dist/site.css && cp src/index.html dist/index.html && cp -R src/img dist && cp -R src/icons dist",
     "prod": "sass --no-source-map src/scss/theme.scss dist/site.css --style compressed && cp src/index.html dist/index.html && cp -R src/img dist && cp -R src/icons dist",
     "watch": "sass --no-source-map --watch src/scss/theme.scss dist/site.css",
-    "publish": "cp -R dist/* /var/www/andrewgioia.com/"
+    "publish": "rsync -av --delete dist/ /var/www/andrewgioia.com"
   },
   "repository": {
     "type": "git",
